MOBI-82 - add default body swatch to body element - min pagePanel body height different for fixed vs. non-fixed clients - do not set min height for desktop (leaves extra overflow region and scrollbar) - add pagePanel resize to icemobilespring demo nav event - move to non-border-box sizing calc for older browsers
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@35586 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base3/1_page_panel_a.scss
+++ b/resources/themes/base3/1_page_panel_a.scss
@@ -21,6 +21,3 @@ html {
   /* fix issue from JQM themes with body background images */
   height:auto !important;
 }
-.mobi-pagePanel-body {
-    @include border-box;
- }
